[project]
name = "navigator_dagster"
requires-python = ">=3.9,<3.14"
version = "0.1.0"
dependencies = [
    "dagster==1.11.10",
    "pymongo>=4.15.1",
    "selenium>=4.15.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
]

[dependency-groups]
dev = ["dagster-webserver", "dagster-dg-cli", "pytest>=7.0.0", "pytest-mock>=3.10.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "navigator_dagster"
registry_modules = ["navigator_dagster.components.*"]
